# collectors

./: .env.example  .gitignore  API_REFERENCE.md  LIBRARY_USAGE_SUMMARY.md  LICENSE  LOGGING_AND_ERRORS.md  OUTPUT_GUIDE.md  QUICK_START.md  README.md  YOUTUBE_CONFIG_GUIDE.md  load_env.ps1  pyproject.toml
examples/: gnews_example.py  pytrends_example.py  reddit_example.py  save_collected_data.py  telegram_example.py  twitter_example.py  youtube_example.py
src/connectors/: __init__.py
src/connectors/common/: __init__.py  config.py  exceptions.py  http.py  logging_config.py
src/connectors/gnews/: __init__.py  client.py  collector.py  models.py
src/connectors/pytrends/: __init__.py  client.py  collector.py  models.py
src/connectors/reddit/: __init__.py  client.py  collector.py  models.py
src/connectors/telegram/: __init__.py  client.py  collector.py  models.py
src/connectors/twitter/: __init__.py  client.py  collector.py  models.py
src/connectors/youtube/: __init__.py  client.py  collector.py  models.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_integration.py
tests/common/: __init__.py
tests/gnews/: test_gnews.py
tests/pytrends/: test_pytrends.py
tests/reddit/: __init__.py  test_reddit.py
tests/telegram/: __init__.py  test_telegram.py
tests/twitter/: __init__.py  test_twitter.py
tests/youtube/: __init__.py  test_youtube.py
