[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "connectors"
version = "0.1.0"
description = "Framework-agnostic data collectors for Reddit, Telegram, YouTube, and Twitter"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["data-collection", "reddit", "telegram", "youtube", "twitter", "scraping"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.4.0",
    "tenacity>=8.0.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
reddit = [
    "asyncpraw>=7.7.0",
]
telegram = [
    "telethon>=1.34.0",
]
youtube = [
    "yt-dlp>=2024.12.0",
    "youtube-transcript-api>=0.6.0",
    "faster-whisper>=1.1.0",
]
twitter = [
    # httpx already in core dependencies
]
all = [
    "asyncpraw>=7.7.0",
    "telethon>=1.34.0",
    "yt-dlp>=2024.12.0",
    "youtube-transcript-api>=0.6.0",
    "faster-whisper>=1.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/connectors"
Documentation = "https://connectors.readthedocs.io"
Repository = "https://github.com/yourusername/connectors"
Issues = "https://github.com/yourusername/connectors/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/connectors --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
